--- a/src/components/Search/OntologySearch.scss
+++ b/src/components/Search/OntologySearch.scss
@@ -1,8 +1,7 @@
 @import '../Styling/Variables';
 
 .search_page {
-  height: 100%;
-  min-height: 100vh;
+
   display: flex;
   flex-direction: column;
   align-items: center;
